kubernetes/manifests/speedtest-tracker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: speedtest
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  labels:
    io.kompose.service: speedtest
  name: speedtest
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: speedtest
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      labels:
        io.kompose.service: speedtest
    spec:
      containers:
        - env:
            - name: OOKLA_EULA_GDPR
              value: "true"
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: SLACK_WEBHOOK
              value: $SLACK_WEBHOOK_URL
            - name: TZ
              value: America/New_York
          image: henrywhitaker3/speedtest-tracker:latest
          name: speedtest
          ports:
            - containerPort: 80
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          #   timeoutSeconds: 5
          #   failureThreshold: 3
          #   successThreshold: 1
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          #   timeoutSeconds: 5
          #   failureThreshold: 3
          #   successThreshold: 1
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: speedtest-claim
      restartPolicy: Always
      volumes:
        - name: speedtest-claim
          persistentVolumeClaim:
            claimName: speedtest-claim
status: {}
